2025-08-25  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Use codecov token

	* .codecov.yml (ignore): Add a few more files

2025-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Suggests): Add rbenchmark as used in demo/

2025-06-04  Sergey Fedorov  <barracuda@macos-powerpc.org>

	* src/digest.c: Fix endianness handling

2025-06-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

2025-06-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/blake3_portability.h: New header to skip hardware accelerated
	modes on arm64 and amd64 available upstream but not included here

	* src/blake3.h: Include new header to guide blake3 compilation

2025-06-01  Dirk Eddelbuettel  <edd@debian.org>

	* src/blake3.c: Sync with updated upstream version
	* src/blake3_dispatch.c: Idem
	* src/blake3.h: Idem
	* src/blake3_impl/h: Idem
	* src/blake3_portable.c: Idem

2025-01-07  Thierry Onkelinx <thierry.onkelinx@inbo.be>

	* R/sha1.R (sha1.default): Tweak message
	* man/sha1.R: Extend fallback discussion

2025-01-06  Dirk Eddelbuettel  <edd@debian.org>

	* R/sha1.R (sha1.default): Revert to warning
	* man/sha1.R: Document fallback, provide reference to package
	implementing local S3 dispatch override methods

2025-01-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

	* R/sha1.R (sha1.default): Add fallback conversion for S3 classes not
	covered, along with (suppressable) message

2025-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* R/sha1.R: Add support for environment and '<-'
	* man/sha1.R: Add alias
	* NAMESPACE: Export new methods

2025-01-01  Bill Denney  <wdenney@humanpredictions.com>

	* R/digest.R: Increase testing removing "nocov" lines
	* inst/tinytest/test_digest.R: Additional digest() tests
	* inst/tinytest/test_sha1.R: Additional sha1() tests

2024-12-31  Bill Denney  <wdenney@humanpredictions.com>

	* DESCRiPTION (Description): Correct typos