@@ -1,3 +1,10 @@
+2025-10-03  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/digest.R (digest): Additional #nocov
+	* R/vdigest.R: (non_streaming_digest): Idem
+
+	* src/digest.c (digest): Additional #nocov blocks
+
 2025-08-25  Dirk Eddelbuettel  <edd@debian.org>
 
 	* .github/workflows/ci.yaml (jobs): Use codecov token
